--- a/src/content/docs/en/tutorial/4-layouts/2.mdx
+++ b/src/content/docs/en/tutorial/4-layouts/2.mdx
@@ -44,7 +44,7 @@ When you include the `layout` frontmatter property in an `.md` file, all of your
 
     ```markdown title="src/pages/posts/post-1.md" ins={2}
     ---
-    layout: ../../layouts/MarkdownPostLayout.astro
+    layouts: ../../layouts/MarkdownPostLayout.astro
     title: 'My First Blog Post'
     pubDate: 2022-07-01
     description: 'This is the first post of my new Astro blog.'
